<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/lblsite"
    	android:id="@+id/lblSiteName"
    />
    <EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/txtSiteName"
    	android:layout_toRightOf="@id/lblSiteName"
    />
    <TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_below="@id/txtSiteName"
    	android:text="@string/lbluser"
    	android:id="@+id/lblUserName"
    />
    <EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/txtUserName"
    	android:layout_toRightOf="@id/lblUserName"
    	android:layout_below="@id/txtSiteName"
    />
    <TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_below="@id/txtUserName"
    	android:text="@string/lblhash"
    	android:id="@+id/lblAccessHash"
    />
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/linearone"
    	android:layout_alignParentBottom="true"
    	android:gravity="center">
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:id="@+id/btnTest"
    	android:text="@string/btntest"
    	android:layout_alignParentLeft="true"
    	android:minWidth="100.0sp"
	/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btnSave"
		android:text="@string/btnsave"
		android:minWidth="100.0sp"
	/>
	   <Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btncancel"
		android:text="@string/btncancel"
		android:layout_alignParentRight="true"
		android:minWidth="100.0sp"
	/>
	</LinearLayout>
    <EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/txtAccessHash"
    	android:layout_below="@id/lblAccessHash"
    	android:layout_above="@id/linearone"
    	android:scrollbars="vertical"
    	android:fadingEdge="horizontal"
    	android:textSize="12.0sp"
    	android:typeface="monospace"
    />
</RelativeLayout>